--- a/sctnet/res/layout/resume_create_activity.xml
+++ b/sctnet/res/layout/resume_create_activity.xml
@@ -11,7 +11,7 @@
         android:id="@+id/create_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/create_button_bg"
+        android:background="@drawable/create_button"
         />
     
    
