--- a/sctnet/res/layout/education_experience_edit_activity.xml
+++ b/sctnet/res/layout/education_experience_edit_activity.xml
@@ -229,7 +229,7 @@
                 android:text="" />
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/profession"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -237,8 +237,6 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
@@ -246,20 +244,35 @@
                 android:id="@+id/profession_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="专业"
                 android:textColor="@color/lightBlack" />
 
-            <EditText
+            <TextView
                 android:id="@+id/profession_value"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/my_edittext"
+                android:layout_toLeftOf="@+id/arrow1"
+                android:gravity="right"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
-        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/arrow1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@null"
+                android:shadowColor="#ffffffff"
+                android:shadowDx="0.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="1.0"
+                android:src="@drawable/arrow" >
+            </ImageView>
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/technology"
@@ -293,7 +306,7 @@
                 android:text="" />
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/aidprofession"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -301,8 +314,6 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
@@ -310,20 +321,35 @@
                 android:id="@+id/aidprofession_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="辅助专业"
                 android:textColor="@color/lightBlack" />
 
-            <EditText
+            <TextView
                 android:id="@+id/aidprofession_value"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/my_edittext"
+                android:layout_toLeftOf="@+id/arrow1"
+                android:gravity="right"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
-        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/arrow1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@null"
+                android:shadowColor="#ffffffff"
+                android:shadowDx="0.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="1.0"
+                android:src="@drawable/arrow" >
+            </ImageView>
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/computerlevel"
