--- a/sctnet/res/layout/information_detail.xml
+++ b/sctnet/res/layout/information_detail.xml
@@ -28,6 +28,7 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
+           android:textColor="@color/lightBlack"
            />
        </LinearLayout>
 </ScrollView>
