--- a/sctnet/res/layout/company_location_activity.xml
+++ b/sctnet/res/layout/company_location_activity.xml
@@ -27,7 +27,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:clickable="true" />
-
+<!-- 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
             android:orientation="vertical"
             android:paddingBottom="105dip" >
 
-            <!-- 地址信息显示TextView -->
+          地址信息显示TextView
 
             <TextView
                 android:id="@+id/map_bubbleText"
@@ -57,7 +57,7 @@
             android:layout_gravity="center"
             android:orientation="vertical" >
 
-            <!-- 位置指标显示ImageView -->
+          位置指标显示ImageView 
  
             <ImageView
                 android:id="@+id/point_image"
@@ -68,6 +68,7 @@
                 android:src="@drawable/point_start" />
                 
         </LinearLayout>
+         -->
     </FrameLayout>
 
 </LinearLayout>
