--- a/sctnet/res/layout/resume_manager_activity.xml
+++ b/sctnet/res/layout/resume_manager_activity.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:background="@color/white"
-        android:visibility="invisible" >
+        android:visibility="visible" >
 
         <ImageView
             android:id="@+id/myPhoto"
@@ -54,6 +54,7 @@
             android:layout_alignBottom="@+id/resumeUpdate"
             android:layout_alignTop="@+id/resumeUpdate"
             android:layout_toRightOf="@+id/resumeUpdate"
+            android:textColor="@color/blue"
             android:paddingBottom="8dp"
             android:paddingLeft="5dp" />
 
@@ -75,6 +76,7 @@
             android:layout_alignBottom="@+id/resumeFinishStatus"
             android:layout_alignTop="@+id/resumeFinishStatus"
             android:layout_toRightOf="@+id/resumeFinishStatus"
+            android:textColor="@color/blue"
             android:paddingBottom="8dp"
             android:paddingLeft="5dp" />
 
@@ -96,6 +98,7 @@
             android:layout_alignBottom="@+id/resumePublic"
             android:layout_alignTop="@+id/resumePublic"
             android:layout_toRightOf="@+id/resumePublic"
+            android:textColor="@color/blue"
             android:paddingBottom="8dp"
             android:paddingLeft="5dp" />
 
