--- a/sctnet/res/layout/resume_preview_activity.xml
+++ b/sctnet/res/layout/resume_preview_activity.xml
@@ -49,6 +49,7 @@
         android:id="@+id/expandableListView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_below="@+id/personal_name_value"
