--- a/sctnet/res/layout/information_list_more_activity.xml
+++ b/sctnet/res/layout/information_list_more_activity.xml
@@ -11,6 +11,7 @@
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
         android:divider="@color/background"
+        android:listSelector="@color/background"
         android:dividerHeight="1dp" 
         />
     
