--- a/sctnet/res/layout/resume_manager_activity.xml
+++ b/sctnet/res/layout/resume_manager_activity.xml
@@ -24,7 +24,14 @@
             android:paddingBottom="15dp"
             android:paddingTop="20dp"
             android:src="@drawable/default_photo_bg" />
-
+        <ImageView
+            android:id="@+id/myPhoto1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="15dp"
+             />
         <TextView
             android:id="@+id/resumeName"
             android:layout_width="wrap_content"
