--- a/sctnet/res/layout/worksearch_activity.xml
+++ b/sctnet/res/layout/worksearch_activity.xml
@@ -76,13 +76,22 @@
             android:src="@drawable/report_curor"
             android:scaleType="matrix" />
     </RelativeLayout>
-           
+          <TextView
+            android:id="@+id/tv_search_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_title_layout"
+            android:padding="10dp"
+            android:drawableLeft="@drawable/search_history"
+            android:text="近期搜索记录"
+            android:textColor="@color/blue"
+            android:textSize="16dp" />  
         <ListView 
           android:id="@+id/search_history_listview"	
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"
+          android:layout_below="@+id/tv_search_history"
           android:cacheColorHint="#00000000"
-          android:layout_below="@+id/search_title_layout"
        /> 
     
 </RelativeLayout>
