--- a/sctnet/res/layout/job_detail_layout.xml
+++ b/sctnet/res/layout/job_detail_layout.xml
@@ -161,6 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" 
+            android:background="@drawable/item_selector"
             >
 
             <ImageView
