--- a/sctnet/res/layout/my_applied_job_item.xml
+++ b/sctnet/res/layout/my_applied_job_item.xml
@@ -6,49 +6,11 @@
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 
-    <LinearLayout
-        android:id="@+id/layout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:padding="10dp" >
-
-        <TextView
-            android:id="@+id/job_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:singleLine="true"
-            android:text="职位名称"
-            android:textColor="@color/black"
-            android:textSize="16dp" />
-
-        <TextView
-            android:id="@+id/company_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:text="公司名称公司名称公司名称公司名称公司名称公司名称公司名称"
-            android:textColor="@color/lightBlack"
-            android:textSize="13dp" />
-
-        <TextView
-            android:id="@+id/application_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp"
-            android:singleLine="true"
-            android:text="申请日期"
-            android:textColor="#6E6E6E"
-            android:textSize="13dp" />
-    </LinearLayout>
-
-
+    
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:id="@+id/rl_layout2"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/layout1"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:padding="10dp"
@@ -58,13 +20,13 @@
         
         <LinearLayout 
             android:id="@+id/status"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_toLeftOf="@+id/arrow"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
-            android:visibility="visible"
+            android:visibility="gone"
             >
             
             <TextView
@@ -111,5 +73,47 @@
             android:layout_centerVertical="true"
             android:src="@drawable/arrow" />
     </RelativeLayout>
+    
+    <LinearLayout
+        android:id="@+id/layout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/rl_layout2"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/job_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:singleLine="true"
+            android:text="职位名称"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/company_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="公司名称公司名称公司名称公司名称公司名称公司名称公司名称"
+            android:textColor="@color/lightBlack"
+            android:textSize="13dp" />
+
+        <TextView
+            android:id="@+id/application_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:singleLine="true"
+            android:text="申请日期"
+            android:textColor="#6E6E6E"
+            android:textSize="13dp" />
+    </LinearLayout>
+
+
+    
 
 </RelativeLayout>
