--- a/sctnet/res/layout/company_info_layout.xml
+++ b/sctnet/res/layout/company_info_layout.xml
@@ -95,8 +95,10 @@
             android:layout_height="13dp" />
 
         <LinearLayout
+            android:id="@+id/company_address_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/item_selector"
             android:orientation="horizontal" >
 
             <ImageView
@@ -111,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:padding="2dp"
                 android:text="北京市朝阳区北苑路乙108号"
+                 
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </LinearLayout>
