--- a/sctnet/res/layout/job_detail_layout.xml
+++ b/sctnet/res/layout/job_detail_layout.xml
@@ -158,6 +158,7 @@
             android:layout_height="13dp" />
 		
 		<RelativeLayout
+		    android:id="@+id/company_address_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" 
@@ -178,6 +179,7 @@
                 android:layout_toRightOf="@+id/dingwei"
                 android:padding="2dp"
                 android:text="北京市朝阳区北苑路乙108号北美国际商务中心"
+                
                 android:textColor="@color/black"
                 android:textSize="16dp" />
         </RelativeLayout>
