--- a/sctnet/res/layout/resume_edit_activity.xml
+++ b/sctnet/res/layout/resume_edit_activity.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="7dp"/>
-    <EditText 
+    <TextView 
         android:id="@+id/resume_name_value"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:inputType="textNoSuggestions"
+        android:text="我的简历"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
