--- a/sctnet/res/layout/recruitment_item.xml
+++ b/sctnet/res/layout/recruitment_item.xml
@@ -29,6 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/blue"
+                    android:layout_marginBottom="6dp"
                     android:textSize="17dp" />
 
                 <TextView
@@ -36,6 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
+                    android:paddingTop="5dp"
                     android:layout_marginRight="5dp"
                     android:textColor="@color/blue"
                     android:textSize="16dp" />
