--- a/sctnet/res/layout/home_activity.xml
+++ b/sctnet/res/layout/home_activity.xml
@@ -25,7 +25,7 @@
              android:background="@drawable/search_bg"
              android:hint="@string/homeactivityhint"
              android:gravity="center_vertical"
-              android:paddingLeft="35dip"
+              android:paddingLeft="20dip"
               android:focusable="false"
               android:singleLine="true"
                />  
@@ -34,9 +34,11 @@
 	        android:id="@+id/search_bar"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" 
-	        android:layout_marginLeft="10dip"
+	        android:layout_marginRight="10dip"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
 	        android:layout_centerVertical="true"
-	        android:layout_alignLeft="@+id/search_edit_bg"  
+	        android:layout_alignRight="@+id/search_edit_bg"  
 	        android:background="@drawable/search_bar"
         /> 
          </RelativeLayout>
