--- a/sctnet/res/layout/archives_list.xml
+++ b/sctnet/res/layout/archives_list.xml
@@ -5,6 +5,16 @@
     android:layout_height="fill_parent"
     android:background="@color/background" >
 
+    <TextView 
+        android:id="@+id/explain_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textColor="@color/blue"
+        android:background="#ffffff"
+        android:text="@string/archivers_explain"
+        android:textSize="10dp"
+        />
     <ListView
         android:id="@+id/archives_list"   
         android:layout_width="fill_parent"
@@ -12,6 +22,7 @@
         android:cacheColorHint="#00000000"
         android:divider="@color/background"
         android:dividerHeight="3dp" 
+        android:layout_below="@+id/explain_text"
         />
     
 
