--- a/sctnet/res/layout/archives_list_item.xml
+++ b/sctnet/res/layout/archives_list_item.xml
@@ -13,34 +13,37 @@
         android:background="#ffffff"
         android:orientation="vertical"
         android:padding="10dp" >
-
+     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue"
+            android:text="档案号："
+            android:textSize="17dp" />
         <TextView
             android:id="@+id/file_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/blue"
             android:textSize="17dp" />
-
+    </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="2px"
             android:layout_marginTop="5dp"
             android:background="@color/blue" >
         </View>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           
-            android:orientation="horizontal" >
-
-            
             <LinearLayout
                 android:id="@+id/linearlayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:orientation="vertical" >
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/user_name"
@@ -48,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="小李"
+                    android:layout_marginRight="15dp"
                     android:textColor="@color/blue"
                     android:textSize="16dp" />
 
@@ -56,6 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="15dp"
                     android:text="1991-09-17"
                     android:textColor="@color/lightBlack" />
                 
@@ -70,22 +75,6 @@
                
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" >
-
-                <TextView
-                    android:id="@+id/addtime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    
-                    android:text="2014-09-09"
-                   />
-
-            </RelativeLayout>
-        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
