--- a/sctnet/res/layout/edit_basic_info_activity.xml
+++ b/sctnet/res/layout/edit_basic_info_activity.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/my_edittext"
                 android:paddingLeft="10dp"
+                android:singleLine="true"
                 android:text="" />
         </LinearLayout>
         
@@ -440,8 +441,39 @@
                 android:src="@drawable/arrow" >
             </ImageView>
         </RelativeLayout>
-        
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/current_city_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="55dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="1dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/item_selector"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:focusable="true"  
+   			android:focusableInTouchMode="true" >
+
+            <TextView
+                android:id="@+id/current_city_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:textColor="@color/lightBlack"
+                android:text="居住地" />
+
+            <EditText
+                android:id="@+id/current_city_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_edittext"
+                android:paddingLeft="10dp"
+                android:inputType="textNoSuggestions"
+                android:text="" />
+        </LinearLayout> 
+        <!-- <RelativeLayout
             android:id="@+id/current_city"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -484,8 +516,8 @@
                 android:shadowRadius="1.0"
                 android:src="@drawable/arrow" >
             </ImageView>
-        </RelativeLayout>
-        <LinearLayout
+        </RelativeLayout> -->
+        <!-- <LinearLayout
             android:id="@+id/cardid"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -516,8 +548,8 @@
                 android:paddingLeft="10dp"
                 android:inputType="textNoSuggestions"
                 android:text="" />
-        </LinearLayout>
-        <LinearLayout
+        </LinearLayout> -->
+        <!-- <LinearLayout
             android:id="@+id/drivecode"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -548,8 +580,8 @@
                 android:paddingLeft="10dp"
                 android:inputType="textNoSuggestions"
                 android:text="" />
-        </LinearLayout>
-        <LinearLayout
+        </LinearLayout> -->
+       <!--  <LinearLayout
             android:id="@+id/address"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -580,7 +612,7 @@
                 android:background="@drawable/my_edittext"
                 android:paddingLeft="10dp"
                 android:text="" />
-        </LinearLayout>
+        </LinearLayout> -->
        
     </LinearLayout>
 
