--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -115,16 +115,31 @@
         android:text="@string/login"
         android:textColor="#ffffff"
         android:textSize="18sp" />
+<RelativeLayout
+        android:id="@+id/login_relative_layout3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:layout_marginTop="30dip" >    
+    <Button
+        android:id="@+id/forget_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:background="#00000000"
+        android:text="@string/forgetPassword"
+        android:textColor="@drawable/btn_text_color" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dip"
-        android:layout_marginTop="30dip"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/forget_password"
+        android:layout_alignBottom="@+id/forget_password"
         android:background="#00000000"
         android:text="@string/registerNow"
         android:textColor="@drawable/btn_text_color" />
-
+</RelativeLayout>
 </LinearLayout>
