--- a/sctnet/res/layout/recruitment_item.xml
+++ b/sctnet/res/layout/recruitment_item.xml
@@ -4,68 +4,84 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical" >
-
+<RelativeLayout 
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:background="@drawable/item_selector"
+    android:layout_margin="10dp">
     <LinearLayout
+        android:id="@+id/item_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/item_selector"
+        
+        
         android:orientation="vertical"
         android:padding="10dp" >
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/recruitment_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/blue"
+            android:textSize="16dp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            
             android:orientation="horizontal" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/recruitment_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/blue"
-                    android:layout_marginBottom="6dp"
-                    android:textSize="17dp" />
-
-                <TextView
-                    android:id="@+id/recruitment_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:paddingTop="5dp"
-                    android:layout_marginRight="5dp"
-                    android:textColor="@color/blue"
-                    android:textSize="16dp" />
-            </LinearLayout>
-
-            <RelativeLayout
+            <TextView
+                android:id="@+id/recruitment_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true" >
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:padding="5dp"
+                android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/recruitment_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/arrow"
-                    android:text="发布时间" />
+            <TextView
+                android:id="@+id/recruitment_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/arrow" />
-            </RelativeLayout>
-        </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/recruitment_address_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/item_selector"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/dingwei" 
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/recruitment_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                android:text="四川省成都市小南街99号(人民公园斜对面·长城园旁)"
+                android:textColor="@color/black"
+                 />
+        </LinearLayout>
     </LinearLayout>
-
+    <ImageView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/arrow"
+        android:layout_marginRight="10dp"/>
+</RelativeLayout>
 </LinearLayout>
