--- a/sctnet/res/layout/resume_edit_activity.xml
+++ b/sctnet/res/layout/resume_edit_activity.xml
@@ -6,7 +6,7 @@
     android:background="@color/background"
     android:orientation="vertical"
     >
-    <TextView 
+    <!-- <TextView 
         android:id="@+id/resume_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,14 +30,14 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
         android:background="@color/white"
-        android:layout_below="@+id/resume_name_text"/>
+        android:layout_below="@+id/resume_name_text"/> -->
     <RelativeLayout 
           android:id="@+id/relativeLayout1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_below="@+id/resume_name_value"
-          android:layout_alignLeft="@+id/resume_name_value"
-          android:layout_alignRight="@+id/resume_name_value"
+          android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
+          android:layout_marginTop="20dp"
           android:background="@color/white"
           >
           <TextView 
