--- a/sctnet/res/layout/worksearch_activity.xml
+++ b/sctnet/res/layout/worksearch_activity.xml
@@ -5,7 +5,7 @@
     android:background="@color/background"
      >
     
-           <com.sctn.sctnet.view.SearchEditText
+           <!-- <com.sctn.sctnet.view.SearchEditText
             android:id="@+id/et_search_searchtxt"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -19,12 +19,45 @@
             android:textColor="#555"
             android:textColorHint="#999"
             android:textSize="15dp" 
-            />
+            /> -->
+            <RelativeLayout
+             android:id="@+id/search_layout"
+             android:layout_width="fill_parent"  
+             android:layout_height="wrap_content"  
+              >
+
+           <EditText 
+             android:id="@+id/et_search_searchtxt"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_edittext_bg"
+            android:hint="@string/search_hint"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dip"
+            android:paddingBottom="10dp"
+            android:singleLine="true"
+            android:textColor="#555"
+            android:textColorHint="#999"
+            android:textSize="15dp" 
+               />  
+               
+              <ImageView 
+	        android:id="@+id/search_bar"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" 
+	        android:layout_marginRight="10dip"
+	        android:paddingLeft="15dp"
+	        android:paddingRight="15dp"
+	        android:layout_centerVertical="true"
+	        android:layout_alignRight="@+id/et_search_searchtxt"  
+	        android:background="@drawable/search_bar"
+        /> 
+         </RelativeLayout>
          <RelativeLayout
         android:id="@+id/search_title_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_search_searchtxt"
+        android:layout_below="@+id/search_layout"
          >
 
         <LinearLayout
