最后一次修改

--- a/sctnet/res/layout/guide_activity.xml
+++ b/sctnet/res/layout/guide_activity.xml
@@ -19,27 +19,27 @@
         android:orientation="horizontal" >
 
         <TextView 
-            android:layout_width="20dp"
-            android:layout_height="5dp"
-            android:background="#ffffff"
+            android:layout_width="40dp"
+            android:layout_height="7dp"
+            android:background="#7f000000"
             />
         <TextView 
-            android:layout_width="20dp"
-            android:layout_height="5dp"
-            android:layout_marginLeft="2dp"
-            android:background="#ffffff"
+            android:layout_width="40dp"
+            android:layout_height="7dp"
+            android:layout_marginLeft="5dp"
+            android:background="#7f000000"
             />
         <TextView 
-            android:layout_width="20dp"
-            android:layout_height="5dp"
-            android:layout_marginLeft="2dp"
-            android:background="#ffffff"
+            android:layout_width="40dp"
+            android:layout_height="7dp"
+            android:layout_marginLeft="5dp"
+            android:background="#7f000000"
             />
         <TextView 
-            android:layout_width="20dp"
-            android:layout_height="5dp"
-            android:layout_marginLeft="2dp"
-            android:background="#ffffff"
+            android:layout_width="40dp"
+            android:layout_height="7dp"
+            android:layout_marginLeft="5dp"
+            android:background="#7f000000"
             />
     </LinearLayout>
 
