--- a/sctnet/res/layout/archives_list.xml
+++ b/sctnet/res/layout/archives_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
+        android:layout_margin="10dp"
         android:textColor="@color/blue"
         android:background="#ffffff"
         android:text="@string/archivers_explain"
