--- a/sctnet/res/layout/archives_list_item.xml
+++ b/sctnet/res/layout/archives_list_item.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/blue"
+            android:layout_marginLeft="10dp"
             android:text="档案号："
             android:textSize="17dp" />
         <TextView
