--- a/sctnet/res/layout/change_password_activity.xml
+++ b/sctnet/res/layout/change_password_activity.xml
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:drawablePadding="10dp"
-                android:text="@string/current_password_hint"
+                android:text="确认新密码"
                 android:padding="10dp" />
 
             <EditText
