--- a/sctnet/res/layout/custom_dialog_layout.xml
+++ b/sctnet/res/layout/custom_dialog_layout.xml
@@ -73,7 +73,7 @@
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
             android:textColor="@color/white"
-            android:background="@color/blue"
+            android:background="@drawable/blue_button_selector"
             android:visibility="gone"
              />
 
@@ -86,7 +86,7 @@
             android:gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:background="@color/blue"
+            android:background="@drawable/blue_button_selector"
             android:textColor="@color/white"
             android:visibility="gone"
             android:text="" />
