--- a/sctnet/res/layout/recruitment_company_list_item.xml
+++ b/sctnet/res/layout/recruitment_company_list_item.xml
@@ -29,6 +29,7 @@
             android:layout_toRightOf="@+id/company_name"
             android:layout_alignBottom="@+id/company_name"
             android:maxEms="8"
+            android:singleLine="true"
             android:ellipsize="end"
             android:paddingBottom="3dip"
             android:textColor="#FF000000"
@@ -73,8 +74,8 @@
             android:id="@+id/job_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/partitionlist_name"
-            android:layout_alignTop="@+id/partitionlist_name"
+            android:layout_toRightOf="@+id/job_name"
+            android:layout_alignTop="@+id/job_name"
             android:paddingTop="5dip"
             android:paddingBottom="5dip"
             android:textColor="#FF666666"
